tests/ui/issues/issue-50585.stderr
error[E0658]: `for` is not allowed in a `const`
  --> $DIR/issue-50585.rs:2:18
   |
LL |     |y: Vec<[(); for x in 0..2 {}]>| {};
   |                  ^^^^^^^^^^^^^^^^
   |
   = note: see issue #87575 <https://github.com/rust-lang/rust/issues/87575> for more information
   = help: add `#![feature(const_for)]` to the crate attributes to enable

error[E0308]: mismatched types
  --> $DIR/issue-50585.rs:2:18
   |
LL |     |y: Vec<[(); for x in 0..2 {}]>| {};
   |                  ^^^^^^^^^^^^^^^^ expected `usize`, found `()`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0308, E0658.
For more information about an error, try `rustc --explain E0308`.
